--- a/integration/protractor-jasmine/.c8rc.json
+++ b/integration/protractor-jasmine/.c8rc.json
@@ -3,10 +3,10 @@
   "reportDir": "./target/coverage",
   "allowExternal": true,
   "include": [
-    "**/packages/core/src/**/*.ts",
-    "**/packages/jasmine/src/**/*.ts",
-    "**/packages/web/src/**/*.ts",
-    "**/packages/protractor/src/**/*.ts"
+    "**/packages/core/lib/**/*.js",
+    "**/packages/jasmine/lib/**/*.js",
+    "**/packages/web/lib/**/*.js",
+    "**/packages/protractor/lib/**/*.js"
   ],
   "exclude": [
     "**/target/**",
