--- a/integration/cucumber-7/.c8rc.json
+++ b/integration/cucumber-7/.c8rc.json
@@ -3,8 +3,8 @@
   "reportDir": "./target/coverage",
   "allowExternal": true,
   "include": [
-    "**/packages/core/src/**/*.ts",
-    "**/packages/cucumber/src/**/*.ts"
+    "**/packages/core/lib/**/*.js",
+    "**/packages/cucumber/lib/**/*.js"
   ],
   "exclude": [
     "**/target/**",
