--- a/integration/protractor-web/.c8rc.json
+++ b/integration/protractor-web/.c8rc.json
@@ -3,12 +3,9 @@
   "reportDir": "./target/coverage",
   "allowExternal": true,
   "include": [
-    "**/packages/core/src/**/*.ts",
-    "**/packages/core/lib/**/*.hs",
-    "**/packages/mocha/src/**/*.ts",
+    "**/packages/core/lib/**/*.js",
     "**/packages/mocha/lib/**/*.js",
-    "**/packages/web/src/**/*.ts",
-    "**/packages/protractor/src/**/*.ts",
+    "**/packages/web/lib/**/*.js",
     "**/packages/protractor/lib/**/*.js"
   ],
   "exclude": [
