--- a/integration/webdriverio-web/.c8rc.json
+++ b/integration/webdriverio-web/.c8rc.json
@@ -6,7 +6,8 @@
     "**/packages/core/lib/**/*.js",
     "**/packages/mocha/lib/**/*.js",
     "**/packages/web/lib/**/*.js",
-    "**/packages/webdriverio/lib/**/*.js"
+    "**/packages/webdriverio/lib/**/*.js",
+    "**/packages/webdriverio/esm/**/*.js"
   ],
   "exclude": [
     "**/target/**",
