fix(core): allow for QuestionAdapter\<string\> to proxy .replaceAll() method

--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,7 @@
     "@types/jasmine",
     "@types/mocha",
     "@types/cucumber",
+    "@types/prismjs",
     "@cucumber/create-meta",
     "@cucumber/cucumber",
     "@cucumber/messages",
@@ -19,6 +20,8 @@
     "mocha",
     "mocha-multi",
     "protractor",
+    "prism-react-renderer",
+    "prismjs",
     "selenium-webdriver",
     "webdriverio"
   ],
