--- a/packages/jasmine/tsconfig-esm.build.json
+++ b/packages/jasmine/tsconfig-esm.build.json
@@ -1,14 +1,18 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "module": "Node16",
     "moduleResolution": "Node16",
-    "esModuleInterop": true,
+    "outDir": "esm",
+    "rootDir": "src",
     "target": "es2021",
     "lib": [
       "es2021",
       "dom"
     ],
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ]
 }
