chore(lerna): corrected lerna config to ignore internal examples

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -154,7 +154,7 @@
     {
       "groupName": "Internal dependencies (ignored)",
       "packagePatterns": [
-        "^@examples//",
+        "^@examples/",
         "^@integration/",
         "^@serenity-js/"
       ],
