--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -44,9 +44,9 @@
   },
   "dependencies": {
     "@cucumber/messages": "22.0.0",
+    "@cucumber/gherkin": "27.0.0",
     "@serenity-js/core": "3.13.0",
     "cli-table3": "^0.6.3",
-    "gherkin": "5.1.0",
     "tiny-types": "^1.20.0"
   },
   "peerDependencies": {
