--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -195,6 +195,7 @@ jobs:
           "cucumber-7",
           "cucumber-8",
           "cucumber-9",
+          "cucumber-10",
           "jasmine",
           "mocha",
           "rest",
@@ -203,6 +204,27 @@ jobs:
           "webdriverio-web-webdriver",
         ]
       runs-on: 'ubuntu-latest'
+      node-version: 18.x
+      npm-install-command: make BOOTSTRAP_SCOPE=@integration install
+      download-artifact-name: 'compiled-libs'
+      command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
+      upload-artifact-name: 'test-integration-coverage-reports'
+      upload-artifact-path: 'package.json "integration/*/target/**/*"'
+
+  test-integration-windows:
+    name: 'Integration: Windows'
+    needs:
+      - detect-source-code-changes
+      - lint
+      - compile
+    if: needs.detect-source-code-changes.outputs.has_changes == 'true'
+    uses: 'serenity-js/serenity-js/.github/workflows/main-integration-test-step.yaml@main'
+    with:
+      modules: |
+        [
+          "webdriverio-test-runners",
+        ]
+      runs-on: 'windows-latest'
       node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
