test(cucumber): added missing integration test shortcut

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -307,6 +307,7 @@ jobs:
       - test-integration
       - test-integration-playwright
       - test-integration-protractor
+      - test-integration-windows
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
