--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "integration-test:cucumber-7": "lerna run test --scope @integration/cucumber-7",
     "integration-test:cucumber-8": "lerna run test --concurrency 1 --scope @integration/cucumber-8-*",
     "integration-test:cucumber-9": "lerna run test --concurrency 1 --scope @integration/cucumber-9",
+    "integration-test:cucumber-10": "lerna run test --concurrency 1 --scope @integration/cucumber-10",
     "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
