ci(github): run Cucumber 10 integration tests on CI
Related tickets: #2060

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -195,6 +195,7 @@ jobs:
           "cucumber-7",
           "cucumber-8",
           "cucumber-9",
+          "cucumber-10",
           "jasmine",
           "mocha",
           "rest",
