--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -278,6 +278,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     permissions:
       contents: write
+      id-token: write
     runs-on: ubuntu-latest
     needs:
       - test-linux-node-lts-active
