--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -13,7 +13,8 @@
   "homepage": "https://serenity-js.org",
   "license": "Apache-2.0",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
