fix(core): pinned all the direct dependencies
to help developers ensure compatibility of Serenity/JS with external libraries in their projects

--- a/integration/cucumber-5/package.json
+++ b/integration/cucumber-5/package.json
@@ -32,13 +32,13 @@
     "@integration/cucumber-specs": "3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
-    "@types/mocha": "^10.0.6",
-    "@types/chai": "^4.3.11",
+    "@types/mocha": "10.0.6",
+    "@types/chai": "4.3.11",
     "c8": "8.0.1",
     "cucumber": "5.1.0",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
