--- a/integration/jasmine/package.json
+++ b/integration/jasmine/package.json
@@ -32,15 +32,15 @@
     "@serenity-js/assertions": "^3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
-    "jasmine": "^5.1.0"
+    "jasmine": "5.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
+    "@types/chai": "4.3.11",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
