--- a/package.json
+++ b/package.json
@@ -90,42 +90,42 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@types/chai": "^4.3.11",
-    "@types/chai-as-promised": "^7.1.8",
-    "@types/istanbul-lib-coverage": "^2.0.6",
-    "@types/node": "^18.19.3",
-    "@types/sinon": "^17.0.2",
-    "@types/sinon-chai": "^3.2.12",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@commitlint/cli": "18.4.3",
+    "@commitlint/config-conventional": "18.4.3",
+    "@types/chai": "4.3.11",
+    "@types/chai-as-promised": "7.1.8",
+    "@types/istanbul-lib-coverage": "2.0.6",
+    "@types/node": "18.19.3",
+    "@types/sinon": "17.0.2",
+    "@types/sinon-chai": "3.2.12",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "c8": "8.0.1",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.1",
-    "chromedriver": "^119.0.1",
-    "coveralls": "^3.1.1",
-    "cross-env": "^7.0.3",
+    "chai": "4.3.10",
+    "chai-as-promised": "7.1.1",
+    "chromedriver": "119.0.1",
+    "coveralls": "3.1.1",
+    "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "7.0.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-mocha": "^10.2.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unicorn": "^49.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "fast-glob": "^3.3.2",
-    "husky": "^8.0.3",
-    "istanbul-lib-coverage": "^3.2.2",
-    "lerna": "^6.6.2",
-    "mocha-testdata": "^1.2.0",
-    "playwright-core": "^1.40.1",
-    "rimraf": "^5.0.5",
-    "semver": "^7.5.4",
-    "sinon": "^17.0.1",
-    "sinon-chai": "^3.7.0",
-    "test-console": "^2.0.0",
-    "ts-node": "^10.9.1",
+    "eslint": "8.55.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-mocha": "10.2.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-unicorn": "49.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "fast-glob": "3.3.2",
+    "husky": "8.0.3",
+    "istanbul-lib-coverage": "3.2.2",
+    "lerna": "6.6.2",
+    "mocha-testdata": "1.2.0",
+    "playwright-core": "1.40.1",
+    "rimraf": "5.0.5",
+    "semver": "7.5.4",
+    "sinon": "17.0.1",
+    "sinon-chai": "3.7.0",
+    "test-console": "2.0.0",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   },
   "repository": {
