--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -47,23 +47,23 @@
   },
   "dependencies": {
     "@serenity-js/core": "3.14.0",
-    "agent-base": "^7.1.0",
-    "axios": "^1.6.2",
-    "http-proxy-agent": "^7.0.0",
-    "https-proxy-agent": "^7.0.2",
-    "lru-cache": "^10.1.0",
-    "proxy-from-env": "^1.1.0"
+    "agent-base": "7.1.0",
+    "axios": "1.6.2",
+    "http-proxy-agent": "7.0.0",
+    "https-proxy-agent": "7.0.2",
+    "lru-cache": "10.1.0",
+    "proxy-from-env": "1.1.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@serenity-js/assertions": "3.14.0",
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
+    "@types/chai": "4.3.11",
+    "@types/mocha": "10.0.6",
     "axios-mock-adapter": "1.22.0",
     "c8": "8.0.1",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
