--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -23,15 +23,15 @@
     "@docusaurus/preset-classic": "2.4.3",
     "@docusaurus/remark-plugin-npm2yarn": "2.4.3",
     "@giscus/react": "2.3.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.2.1",
     "docusaurus-plugin-typedoc-api": "3.0.1",
     "docusaurus-remark-plugin-tab-blocks": "^1.3.1",
     "prism-react-renderer": "1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typedoc": "^0.25.2",
-    "typedoc-plugin-mdn-links": "^3.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typedoc": "0.25.4",
+    "typedoc-plugin-mdn-links": "3.1.7"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
