--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -34,21 +34,21 @@
     "node": "^16.13 || ^18.12 || ^20"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.5",
-    "@types/chai": "^4.3.11",
-    "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
+    "@types/body-parser": "1.19.5",
+    "@types/chai": "4.3.11",
+    "@types/express": "4.17.21",
+    "@types/mocha": "10.0.6",
+    "cross-env": "7.0.3",
+    "mocha": "10.2.0",
+    "nodemon": "3.0.2",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "tiny-types": "^1.21.0"
+    "@paralleldrive/cuid2": "2.2.2",
+    "body-parser": "1.20.2",
+    "express": "4.18.2",
+    "morgan": "1.10.0",
+    "tiny-types": "1.21.0"
   }
 }
