--- a/examples/cucumber-reporting/package.json
+++ b/examples/cucumber-reporting/package.json
@@ -34,16 +34,16 @@
     "node": "^16.13 || ^18.12 || ^20"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^10.0.0",
+    "@cucumber/cucumber": "10.0.1",
     "@serenity-js/assertions": "^3.0.0",
     "@serenity-js/console-reporter": "^3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/rest": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
-    "@types/chai": "^4.3.11",
-    "npm-failsafe": "^1.2.0",
-    "ts-node": "^10.9.1",
+    "@types/chai": "4.3.11",
+    "npm-failsafe": "1.2.0",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
