--- a/examples/protractor-mocha/package.json
+++ b/examples/protractor-mocha/package.json
@@ -43,14 +43,14 @@
     "@serenity-js/rest": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
-    "@types/chai": "^4.3.11",
-    "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
-    "express": "^4.18.2",
-    "mocha": "^10.2.0",
-    "npm-failsafe": "^1.2.0",
-    "protractor": "^7.0.0",
-    "ts-node": "^10.9.1",
+    "@types/chai": "4.3.11",
+    "@types/express": "4.17.21",
+    "@types/mocha": "10.0.6",
+    "express": "4.18.2",
+    "mocha": "10.2.0",
+    "npm-failsafe": "1.2.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
