--- a/examples/webdriverio-cucumber/package.json
+++ b/examples/webdriverio-cucumber/package.json
@@ -32,7 +32,7 @@
     "node": "^16.13 || ^18.12 || ^20"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^10.0.0",
+    "@cucumber/cucumber": "10.0.1",
     "@serenity-js/console-reporter": "^3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
@@ -44,9 +44,9 @@
     "@wdio/spec-reporter": "8.24.12",
     "@wdio/types": "8.24.12",
     "@wdio/reporter": "8.24.12",
-    "npm-failsafe": "^1.2.0",
+    "npm-failsafe": "1.2.0",
     "webdriverio": "8.26.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
