--- a/examples/webdriverio-jasmine/package.json
+++ b/examples/webdriverio-jasmine/package.json
@@ -42,11 +42,11 @@
     "@wdio/local-runner": "8.26.0",
     "@wdio/spec-reporter": "8.24.12",
     "@wdio/reporter": "8.24.12",
-    "@types/jasmine": "^5.1.4",
-    "jasmine": "^5.1.0",
-    "npm-failsafe": "^1.2.0",
+    "@types/jasmine": "5.1.4",
+    "jasmine": "5.1.0",
+    "npm-failsafe": "1.2.0",
     "webdriverio": "8.26.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
