--- a/integration/cucumber-specs/package.json
+++ b/integration/cucumber-specs/package.json
@@ -32,10 +32,10 @@
     "@integration/testing-tools": "3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
-    "@types/mocha": "^10.0.6",
-    "@types/chai": "^4.3.11",
-    "mocha": "^10.2.0",
-    "ts-node": "^10.9.1",
+    "@types/mocha": "10.0.6",
+    "@types/chai": "4.3.11",
+    "mocha": "10.2.0",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
