--- a/integration/mocha/package.json
+++ b/integration/mocha/package.json
@@ -34,12 +34,12 @@
     "@serenity-js/mocha": "^3.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
+    "@types/chai": "4.3.11",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
