--- a/integration/playwright-web/package.json
+++ b/integration/playwright-web/package.json
@@ -46,16 +46,16 @@
     "@serenity-js/rest": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "ci-info": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "npm-failsafe": "^1.2.0",
+    "ci-info": "4.0.0",
+    "cross-env": "7.0.3",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "npm-failsafe": "1.2.0",
     "playwright": "^1.40.1",
-    "start-server-and-test": "^2.0.3",
-    "ts-node": "^10.9.1",
+    "start-server-and-test": "2.0.3",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
