--- a/integration/protractor-web/package.json
+++ b/integration/protractor-web/package.json
@@ -46,15 +46,15 @@
     "@serenity-js/protractor": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "chromedriver": "^119.0.1",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "npm-failsafe": "^1.2.0",
+    "chromedriver": "119.0.1",
+    "cross-env": "7.0.3",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "npm-failsafe": "1.2.0",
     "protractor": "^7.0.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
