--- a/integration/web-specs/package.json
+++ b/integration/web-specs/package.json
@@ -34,7 +34,7 @@
     "node": "^16.13 || ^18.12 || ^20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.18.2"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
@@ -45,12 +45,12 @@
     "@serenity-js/rest": "^3.0.0",
     "@serenity-js/serenity-bdd": "^3.0.0",
     "@serenity-js/web": "^3.0.0",
-    "@types/mocha": "^10.0.6",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "@types/mocha": "10.0.6",
+    "cross-env": "7.0.3",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "2.0.3"
   }
 }
