--- a/integration/webdriverio-mocha/package.json
+++ b/integration/webdriverio-mocha/package.json
@@ -39,9 +39,9 @@
     "webdriverio": "8.26.0"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7"
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7"
   }
 }
