--- a/packages/assertions/package.json
+++ b/packages/assertions/package.json
@@ -45,16 +45,16 @@
   },
   "dependencies": {
     "@serenity-js/core": "3.14.0",
-    "tiny-types": "^1.21.0"
+    "tiny-types": "1.21.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
+    "@types/chai": "4.3.11",
+    "@types/mocha": "10.0.6",
     "c8": "8.0.1",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
