--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,32 +33,32 @@
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "dependencies": {
-    "@paralleldrive/cuid2": "^2.2.2",
-    "chalk": "^4.1.2",
-    "diff": "^5.1.0",
+    "@paralleldrive/cuid2": "2.2.2",
+    "chalk": "4.1.2",
+    "diff": "5.1.0",
     "error-stack-parser": "2.1.4",
-    "fast-glob": "^3.3.2",
-    "filenamify": "^4.3.0",
-    "graceful-fs": "^4.2.11",
-    "moment": "^2.29.4",
-    "semver": "^7.5.4",
-    "tiny-types": "^1.21.0",
-    "upath": "^2.0.1",
-    "validate-npm-package-name": "^5.0.0"
+    "fast-glob": "3.3.2",
+    "filenamify": "4.3.0",
+    "graceful-fs": "4.2.11",
+    "moment": "2.29.4",
+    "semver": "7.5.4",
+    "tiny-types": "1.21.0",
+    "upath": "2.0.1",
+    "validate-npm-package-name": "5.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/diff": "^5.0.9",
-    "@types/filenamify": "^2.0.2",
-    "@types/mocha": "^10.0.6",
-    "@types/semver": "^7.5.6",
-    "@types/validate-npm-package-name": "^4.0.2",
-    "assertion-error-formatter": "^3.0.0",
+    "@types/chai": "4.3.11",
+    "@types/diff": "5.0.9",
+    "@types/filenamify": "2.0.2",
+    "@types/mocha": "10.0.6",
+    "@types/semver": "7.5.6",
+    "@types/validate-npm-package-name": "4.0.2",
+    "assertion-error-formatter": "3.0.0",
     "c8": "8.0.1",
-    "memfs": "^4.6.0",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "ts-node": "^10.9.1",
+    "memfs": "4.6.0",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   },
   "repository": {
