--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -51,28 +51,28 @@
   },
   "dependencies": {
     "@serenity-js/core": "3.14.0",
-    "http-shutdown": "^1.2.2",
-    "portfinder": "^1.0.32"
+    "http-shutdown": "1.2.2",
+    "portfinder": "1.0.32"
   },
   "devDependencies": {
-    "@hapi/hapi": "^21.3.2",
+    "@hapi/hapi": "21.3.2",
     "@integration/testing-tools": "3.0.0",
     "@serenity-js/assertions": "3.14.0",
     "@serenity-js/rest": "3.14.0",
-    "@types/chai": "^4.3.11",
-    "@types/express": "^4.17.21",
-    "@types/hapi": "^18.0.14",
-    "@types/mocha": "^10.0.6",
-    "@types/restify": "^8.5.11",
-    "axios": "^1.6.2",
+    "@types/chai": "4.3.11",
+    "@types/express": "4.17.21",
+    "@types/hapi": "18.0.14",
+    "@types/mocha": "10.0.6",
+    "@types/restify": "8.5.11",
+    "axios": "1.6.2",
     "c8": "8.0.1",
-    "express": "^4.18.2",
-    "koa": "^2.14.2",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "restify": "^11.1.0",
-    "semver": "^7.5.4",
-    "ts-node": "^10.9.1",
+    "express": "4.18.2",
+    "koa": "2.14.2",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "restify": "11.1.0",
+    "semver": "7.5.4",
+    "ts-node": "10.9.2",
     "typescript": "5.1.6"
   }
 }
