--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -69,8 +69,8 @@
     "@serenity-js/rest": "3.14.0",
     "@serenity-js/web": "3.14.0",
     "@wdio/reporter": "8.24.12",
-    "deepmerge": "^4.3.1",
-    "tiny-types": "^1.21.0"
+    "deepmerge": "4.3.1",
+    "tiny-types": "1.21.0"
   },
   "peerDependencies": {
     "@serenity-js/cucumber": "^3.0.0",
@@ -92,21 +92,21 @@
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
-    "@types/mocha": "^10.0.6",
+    "@types/mocha": "10.0.6",
     "@wdio/cli": "8.26.0",
     "@wdio/devtools-service": "8.26.0",
     "@wdio/dot-reporter": "8.24.12",
     "@wdio/local-runner": "8.26.0",
     "@wdio/spec-reporter": "8.24.12",
     "@wdio/types": "8.24.12",
-    "axios": "^1.6.2",
+    "axios": "1.6.2",
     "c8": "8.0.1",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.2.0",
-    "mocha-multi": "^1.1.7",
-    "mocha-testdata": "^1.2.0",
-    "puppeteer-core": "^20.9.0",
-    "start-server-and-test": "^2.0.3",
+    "cross-env": "7.0.3",
+    "mocha": "10.2.0",
+    "mocha-multi": "1.1.7",
+    "mocha-testdata": "1.2.0",
+    "puppeteer-core": "20.9.0",
+    "start-server-and-test": "2.0.3",
     "webdriverio": "8.26.0"
   }
 }
