--- a/integration/playwright-web/package.json
+++ b/integration/playwright-web/package.json
@@ -53,7 +53,7 @@
     "mocha": "10.2.0",
     "mocha-multi": "1.1.7",
     "npm-failsafe": "1.2.0",
-    "playwright": "^1.40.1",
+    "playwright": "1.40.1",
     "start-server-and-test": "2.0.3",
     "ts-node": "10.9.2",
     "typescript": "5.1.6"
