feat(serenity-bdd): support for Serenity BDD 4

--- a/examples/playwright-test-todomvc/serenity.properties
+++ b/examples/playwright-test-todomvc/serenity.properties
@@ -1,1 +1,6 @@
 serenity.project.name=Serenity/JS with Playwright
+serenity.compress.filenames=false
+#serenity.test.root=spec
+#serenity.requirements.dir=spec
+serenity.features.directory=spec
+#serenity.estimated.tests.per.requirement=4
