--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
     "lerna:test:publish": "lerna publish --no-git-tag-version --no-push",
     "version:print": "bin/print-versions.ts",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.0",
