--- a/packages/jasmine/tsconfig-cjs.build.json
+++ b/packages/jasmine/tsconfig-cjs.build.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "moduleResolution": "Node16",
+    "moduleResolution": "Node",
     "outDir": "lib",
     "rootDir": "src",
     "target": "es2022",
