--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -27,6 +27,7 @@
     "clsx": "1.2.1",
     "docusaurus-plugin-typedoc-api": "3.0.1",
     "docusaurus-remark-plugin-tab-blocks": "^1.3.1",
+    "fast-glob": "3.3.2",
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
