chore(renovate): group Serenity/JS REST dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -93,6 +93,20 @@
       ]
     },
     {
+      "groupName": "REST dependencies",
+      "labels": [
+        "@serenity-js/rest"
+      ],
+      "packagePatterns": [
+        "agent-base",
+        "axios",
+        "http-proxy-agent",
+        "https-proxy-agent",
+        "lru-cache",
+        "proxy-from-env"
+      ]
+    },
+    {
       "groupName": "WebdriverIO dependencies",
       "labels": [
         "@serenity-js/webdriverio",
