--- a/packages/module-manager/package.json
+++ b/packages/module-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@serenity-js/module-manager",
-  "version": "3.16.2",
+  "version": "3.17.0",
   "description": "Serenity/JS Module Manager",
   "author": {
     "name": "Jan Molak",
@@ -28,14 +28,6 @@
         "require": "./lib/index.js"
       },
       "./lib/index.js"
-    ],
-    "./adapter": [
-      {
-        "types": "./esm/adapter/index.d.ts",
-        "import": "./esm/adapter/index.js",
-        "require": "./lib/adapter/index.js"
-      },
-      "./lib/adapter/index.js"
     ],
     "./package.json": "./package.json"
   },
@@ -68,20 +60,22 @@
     "node": "^16.13 || ^18.12 || ^20"
   },
   "dependencies": {
-    "@serenity-js/core": "3.16.2",
-    "@serenity-js/rest": "3.16.2",
+    "@serenity-js/core": "3.17.0",
+    "@serenity-js/rest": "3.17.0",
     "axios": "1.6.7",
-    "graceful-fs": "4.2.11"
+    "graceful-fs": "4.2.11",
+    "tiny-types": "1.21.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/chai": "4.3.11",
     "@types/mocha": "10.0.6",
     "c8": "9.1.0",
+    "fs-monkey": "1.0.5",
     "memfs": "4.6.0",
     "mocha": "10.2.0",
     "mocha-multi": "1.1.7",
-    "ts-node": "10.9.2",
+    "tsx": "4.7.1",
     "typescript": "5.2.2"
   }
 }
