--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
     name: 'Lint'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: npm ci
       command: make lint
 
@@ -54,7 +54,7 @@ jobs:
     name: 'Compile'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=libs install
       command: make COMPILE_SCOPE=libs compile
       upload-artifact-name: 'compiled-libs'
@@ -73,7 +73,7 @@ jobs:
     if: needs.detect-source-code-changes.outputs.has_changes == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test
@@ -89,24 +89,25 @@ jobs:
     if: needs.detect-source-code-changes.outputs.has_changes == 'true'
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
-      node-version: 16.x
-      npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
-      download-artifact-name: 'compiled-libs'
-      command: make test-no-coverage
-
-  test-linux-node-lts-next:
-    name: 'Test: Linux, LTS+1'
-    needs:
-      - detect-source-code-changes
-      - lint
-      - compile
-    if: needs.detect-source-code-changes.outputs.has_changes == 'true'
-    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
-    with:
       node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test-no-coverage
+
+# Todo: enable in April/May 2024 https://nodejs.org/en/about/previous-releases
+#  test-linux-node-lts-next:
+#    name: 'Test: Linux, LTS+1'
+#    needs:
+#      - detect-source-code-changes
+#      - lint
+#      - compile
+#    if: needs.detect-source-code-changes.outputs.has_changes == 'true'
+#    uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
+#    with:
+#      node-version: 20.x
+#      npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
+#      download-artifact-name: 'compiled-libs'
+#      command: make test-no-coverage
 
   test-windows-node-lts-active:
     name: 'Test: Windows, LTS'
@@ -118,7 +119,7 @@ jobs:
     uses: 'serenity-js/serenity-js/.github/workflows/main-node-step.yaml@main'
     with:
       runs-on: 'windows-latest'
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
       command: make test-no-coverage
@@ -143,7 +144,7 @@ jobs:
           "playwright-web"
         ]
       runs-on: 'ubuntu-latest'
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: |
@@ -168,7 +169,7 @@ jobs:
           "protractor-web"
         ]
       runs-on: 'ubuntu-latest'
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
@@ -204,7 +205,7 @@ jobs:
           "webdriverio-web-webdriver",
         ]
       runs-on: 'ubuntu-latest'
-      node-version: 18.x
+      node-version: 20.x
       npm-install-command: make BOOTSTRAP_SCOPE=@integration install
       download-artifact-name: 'compiled-libs'
       command: 'make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test'
@@ -232,7 +233,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install Node Modules
         uses: bahmutov/npm-install@v1
@@ -308,7 +309,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install Node Modules (root)
         uses: bahmutov/npm-install@v1
@@ -377,7 +378,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
         with:
-          node-version: 18.x
+          node-version: 20.x
 
       - name: Install Node Modules
         uses: bahmutov/npm-install@v1
