feat(module-manager): default presets can be downloaded from the Serenity/JS website

--- a/packages/module-manager/package.json
+++ b/packages/module-manager/package.json
@@ -63,6 +63,7 @@
     "@serenity-js/core": "3.18.0",
     "@serenity-js/rest": "3.18.0",
     "axios": "1.6.7",
+    "axios-retry": "4.0.0",
     "graceful-fs": "4.2.11",
     "tiny-types": "1.21.0"
   },
