--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -81,8 +81,6 @@
     "c8": "9.1.0",
     "jasmine": "5.1.0",
     "mocha": "10.3.0",
-    "mocha-multi": "1.1.7",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2"
+    "mocha-multi": "1.1.7"
   }
 }
