--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -92,7 +92,7 @@ jobs:
       node-version: 16.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
-      command: make test-no-coverage
+      command: make test-no-coverage-node16
 
   test-linux-node-lts-next:
     name: 'Test: Linux, LTS+1'
