test(module-manager): run module-manager tests on Node18 and 20

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "compile:@documentation": "lerna run compile --scope '@documentation/*'",
     "test": "lerna run test --scope '@serenity-js/*'",
     "test:no-coverage": "lerna run test:no-coverage --scope '@serenity-js/*'",
-    "test:no-coverage:node16": "lerna run test:no-coverage --scope '@serenity-js/*' --ignore '@serenity-js/jasmine' --ignore '@serenity-js/webdriverio'",
+    "test:no-coverage:node16": "lerna run test:no-coverage --scope '@serenity-js/*' --ignore '@serenity-js/jasmine' --ignore '@serenity-js/webdriverio' --ignore '@serenity-js/module-manager'",
     "integration-test:all": "lerna run test --concurrency 1 --scope '@integration/*'",
     "integration-test:cucumber-all": "lerna run test --concurrency 1 --scope '@integration/cucumber-*'",
     "integration-test:cucumber-1": "lerna run test --scope '@integration/cucumber-1'",
