--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "2.4.3",
     "@docusaurus/theme-mermaid": "2.4.3",
     "@docusaurus/plugin-client-redirects": "2.4.3",
+    "@docusaurus/plugin-content-docs": "2.4.3",
     "@docusaurus/plugin-ideal-image": "2.4.3",
     "@docusaurus/preset-classic": "2.4.3",
     "@docusaurus/remark-plugin-npm2yarn": "2.4.3",
