--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -26,12 +26,14 @@
     "@giscus/react": "2.4.0",
     "@mdx-js/react": "1.6.22",
     "clsx": "1.2.1",
+    "docusaurus-plugin-sass": "0.2.5",
     "docusaurus-plugin-typedoc-api": "3.0.1",
     "docusaurus-remark-plugin-tab-blocks": "^1.3.1",
     "fast-glob": "3.3.2",
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "1.72.0",
     "typedoc": "0.25.0",
     "typedoc-plugin-mdn-links": "3.1.17"
   },
