fix(core): upgraded dependency on tiny-types to 1.22.0

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -52,7 +52,8 @@
     "http-proxy-agent": "7.0.2",
     "https-proxy-agent": "7.0.4",
     "lru-cache": "10.2.0",
-    "proxy-from-env": "1.1.0"
+    "proxy-from-env": "1.1.0",
+    "tiny-types": "1.22.0"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
