chore(renovate): upgrade chromedriver separately from other development toools

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -170,7 +170,6 @@
         "@types/sinon",
         "@types/sinon-chai",
         "chai-as-promised",
-        "^chromedriver$",
         "coveralls",
         "cz-conventional-changelog",
         "cz-customizable",
@@ -180,6 +179,12 @@
         "rimraf",
         "sinon",
         "sinon-chai"
+      ]
+    },
+    {
+      "groupName": "ChromeDriver",
+      "packagePatterns": [
+        "^chromedriver$"
       ]
     },
     {
