--- a/.github/actions/setup-chromedriver-filepath/action.yaml
+++ b/.github/actions/setup-chromedriver-filepath/action.yaml
@@ -14,7 +14,9 @@ runs:
     - name: Get $CHROMEDRIVER_FILEPATH (Windows)
       if: runner.os == 'Windows'
       shell: 'pwsh'
-      run: echo ${{ env.CHROMEDRIVER_FILEPATH }}
+      run: |
+        echo ${{ env.CHROMEDRIVER_FILEPATH }}
+        Test-Path "${{ env.CHROMEDRIVER_FILEPATH }}"
 
     - name: Set CHROMEDRIVER_FILEPATH (Linux & macOS)
       if: runner.os != 'Windows'
@@ -23,4 +25,6 @@ runs:
     - name: Get $CHROMEDRIVER_FILEPATH (Linux & macOS)
       if: runner.os != 'Windows'
       shell: 'bash'
-      run: ls -lah ${{ env.CHROMEDRIVER_FILEPATH }}
+      run: |
+        echo ${{ env.CHROMEDRIVER_FILEPATH }}
+        ls -lah ${{ env.CHROMEDRIVER_FILEPATH }}
