chore(deps): rebuilt package-lock.json

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,9 +76,7 @@ jobs:
       node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
-      command: |
-        ls -lah /home/runner/work/serenity-js/serenity-js/node_modules/chromedriver/lib/chromedriver
-        make test
+      command: make test
       upload-artifact-name: 'test-reports'
       upload-artifact-path: 'package.json "packages/*/target/**/*"'
 
