ci(github): optimise Node module caching on Windows

--- a/.github/workflows/main-node-step.yaml
+++ b/.github/workflows/main-node-step.yaml
@@ -74,6 +74,7 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           install-command: ${{ inputs.npm-install-command }}
+          cache-key-prefix: ${{ runner.os }}-node-${{ inputs.node-version }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Download artifact
         if: ${{ inputs.download-artifact-name || inputs.download-artifact-path }}
