--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -128,6 +128,10 @@ rules:
         Prop: true
         Props: true
         props: true
+        Ref: true
+        Refs: true
+        ref: true
+        refs: true
         TOC: true
         toc: true
         temp: true
