chore(core): parking the prototype

--- a/integration/playwright-web/.mocharc.yml
+++ b/integration/playwright-web/.mocharc.yml
@@ -10,4 +10,5 @@ require:
 timeout: 30000
 v8-stack-trace-limit: 100
 spec:
-  - './node_modules/@integration/web-specs/spec/**/*.spec.ts'
+#  - './node_modules/@integration/web-specs/spec/**/*.spec.ts'
+  - './node_modules/@integration/web-specs/spec/**/Enter.spec.ts'
