chore(deps): pinned Cucumber's dep on type-fast to avoid build failures due to version ranges

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "test-console": "2.0.0",
     "ts-node": "10.9.2",
     "tsx": "4.15.7",
+    "type-fest": "4.8.3",
     "typescript": "5.2.2"
   },
   "repository": {
