--- a/packages/cucumber/tsconfig.build.json
+++ b/packages/cucumber/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts"
