test(playwright-test): testing Playwright CT integration against React 18

--- a/lerna.json
+++ b/lerna.json
@@ -19,6 +19,8 @@
     "mocha",
     "mocha-multi",
     "protractor",
+    "react",
+    "react-dom",
     "selenium-webdriver",
     "webdriverio"
   ],
