docs(core): updated package descriptions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "serenity-js-monorepo",
   "version": "3.0.0-monorepo",
-  "description": "Serenity/JS: Next generation acceptance testing library for modern web applications.",
+  "description": "Serenity/JS: An innovative test automation framework for creating high-quality, business-focused test scenarios that interact with any system interface and produce comprehensive reports",
   "private": true,
   "author": {
     "name": "Jan Molak",
