--- a/packages/assertions/package.json
+++ b/packages/assertions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/assertions",
   "version": "3.25.1",
-  "description": "Screenplay-style assertion library",
+  "description": "Serenity/JS universal assertion library supporting all types of functional tests, including both web and REST API scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
