--- a/packages/console-reporter/package.json
+++ b/packages/console-reporter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/console-reporter",
   "version": "3.25.1",
-  "description": "Serenity/JS console reporter",
+  "description": "Serenity/JS console reporter that displays test results directly in the standard output",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
