--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/playwright",
   "version": "3.25.1",
-  "description": "Serenity/JS Screenplay Pattern library for Playwright",
+  "description": "Serenity/JS adapter for Playwright, enabling the use of the Serenity/JS web library to write component and end-to-end test scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
