--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/protractor",
   "version": "3.25.1",
-  "description": "Test your web apps with Serenity/JS",
+  "description": "Serenity/JS adapter for Protractor, enabling the use of the Serenity/JS web library to write end-to-end test scenarios, and leveraging Serenity/JS reporting capabilities",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
