--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/rest",
   "version": "3.25.1",
-  "description": "Test REST APIs with Serenity/JS",
+  "description": "Serenity/JS Screenplay Pattern library for interacting with REST and other HTTP-based services, supporting comprehensive API testing and blended testing scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
