--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/cucumber",
   "version": "3.25.1",
-  "description": "Serenity/JS adapter for Cucumber test runners version 1.x - 7.x",
+  "description": "Serenity/JS test runner adapter for seamless integration with any version of Cucumber.js, facilitating BDD-style test automation and leveraging Serenity/JS reporting capabilities",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
