--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/jasmine",
   "version": "3.25.1",
-  "description": "Serenity/JS adapter for the Jasmine test runner",
+  "description": "Serenity/JS test runner adapter for Jasmine, enabling the use of the Screenplay Pattern in Jasmine-based test suites and leveraging Serenity/JS reporting capabilities",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
