--- a/packages/mocha/package.json
+++ b/packages/mocha/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/mocha",
   "version": "3.25.1",
-  "description": "Serenity/JS adapter for Mocha",
+  "description": "Serenity/JS test runner adapter for Mocha, enabling the use of the Screenplay Pattern in Mocha-based test suites and leveraging Serenity/JS reporting capabilities",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
