--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/serenity-bdd",
   "version": "3.25.1",
-  "description": "Serenity BDD reporter for Serenity/JS",
+  "description": "Serenity/JS reporting module that produces detailed Serenity BDD test reports and living documentation, enhancing transparency and traceability of test results",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
