--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/web",
   "version": "3.25.1",
-  "description": "Serenity/JS Screenplay Pattern APIs for the Web",
+  "description": "Serenity/JS Screenplay Pattern library offering a flexible, web driver-agnostic approach to interacting with web-based user interfaces and components, suitable for various testing contexts",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
