--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/webdriverio",
   "version": "3.25.1",
-  "description": "Serenity/JS reporter and Screenplay Pattern library for WebdriverIO",
+  "description": "Serenity/JS adapter for WebdriverIO, enabling the use of the Serenity/JS web library to write web- and mobile-based test scenarios, and leveraging Serenity/JS reporting capabilities",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
