fix(local-server): marked dependency on express as optional

--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -64,6 +64,9 @@
     "@hapi/hapi": {
       "optional": true
     },
+    "express": {
+      "optional": true
+    },
     "koa": {
       "optional": true
     },
