chore(deps): rebuilt package-lock.json

--- a/lerna.json
+++ b/lerna.json
@@ -18,6 +18,9 @@
     "jasmine",
     "mocha",
     "mocha-multi",
+    "@playwright/*",
+    "playwright",
+    "playwright-core",
     "protractor",
     "selenium-webdriver",
     "webdriverio"
