chore(github): cleaned up Playwright browser installation process on CI

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -148,7 +148,9 @@ jobs:
       download-artifact-name: 'compiled-libs'
       command: |
         mkdir target && \
+        cd packages/playwright-test && \
         npx --no playwright install --with-deps && \
+        cd ../.. && \
         make INTEGRATION_SCOPE=$INTEGRATION_MODULE integration-test
       upload-artifact-name: 'test-integration-coverage-reports-playwright'
       upload-artifact-path: 'package.json "integration/*/target/**/*"'
