ci(lerna): improved Lerna package bootstrapping script

--- a/lerna.json
+++ b/lerna.json
@@ -30,6 +30,11 @@
   ],
   "version": "3.25.2",
   "command": {
+    "bootstrap": {
+      "npmClientArgs": [
+        "--legacy-peer-deps"
+      ]
+    },
     "create": {
       "homepage": "https://serenity-js.org",
       "license": "Apache-2.0"
