--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
-    "@playwright/test": "1.45.3",
     "@types/chai": "4.3.16",
     "@types/chai-as-promised": "7.1.8",
     "@types/istanbul-lib-coverage": "2.0.6",
@@ -121,6 +120,7 @@
     "istanbul-lib-coverage": "3.2.2",
     "lerna": "6.6.2",
     "mocha-testdata": "1.2.0",
+    "playwright": "1.45.3",
     "rimraf": "5.0.9",
     "semver": "7.6.3",
     "sinon": "18.0.0",
