ci(lerna): improved hoisting of webdriverio packages

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,6 @@
     "@cucumber/create-meta",
     "@cucumber/cucumber",
     "@cucumber/messages",
-    "@wdio/*",
     "cucumber",
     "colors",
     "express",
@@ -19,8 +18,7 @@
     "mocha",
     "mocha-multi",
     "protractor",
-    "selenium-webdriver",
-    "webdriverio"
+    "selenium-webdriver"
   ],
   "packages": [
     "documentation/*",
