--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -58,6 +58,7 @@
     "c8": "10.1.2",
     "mocha": "10.7.0",
     "mocha-multi": "1.1.7",
+    "playwright-core": "1.45.3",
     "ts-node": "10.9.2",
     "typescript": "5.2.2"
   }
