fix(core): updated npm tags to improve discoverability

--- a/packages/assertions/package.json
+++ b/packages/assertions/package.json
@@ -19,8 +19,12 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
     "serenity-js",
-    "cucumber",
+    "screenplay",
+    "screenplay-pattern",
     "tdd",
     "bdd",
     "test",
