--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,12 +19,16 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
+    "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
     "bdd",
     "tdd",
     "test",
-    "testing",
-    "serenity",
-    "screenplay"
+    "testing"
   ],
   "scripts": {
     "clean": "rimraf target",
