--- a/packages/jasmine/package.json
+++ b/packages/jasmine/package.json
@@ -40,7 +40,13 @@
     "./package.json": "./package.json"
   },
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
+    "runner",
     "jasmine",
     "tdd",
     "bdd",
