--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -19,7 +19,14 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "e2e",
+    "end-to-end",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
     "http",
     "rest",
     "axios",
