--- a/packages/mocha/package.json
+++ b/packages/mocha/package.json
@@ -19,7 +19,13 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
+    "runner",
     "mocha",
     "tdd",
     "bdd",
