--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -19,7 +19,16 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "browser",
+    "e2e",
+    "end-to-end",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
+    "runner",
     "ui",
     "frontend",
     "angular",
