--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -19,7 +19,12 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
     "http",
     "rest",
     "axios",
