--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -22,7 +22,13 @@
     "serenity-bdd": "bin/serenity-bdd"
   },
   "keywords": [
+    "automation",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
+    "reporter",
     "tdd",
     "bdd",
     "test",
