--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -19,8 +19,21 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "browser",
+    "component",
+    "e2e",
+    "end-to-end",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
     "playwright",
+    "angular",
+    "react",
+    "vue",
+    "svelte",
     "tdd",
     "bdd",
     "test",
