--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,8 +19,16 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "keywords": [
+    "automation",
+    "browser",
+    "component",
+    "e2e",
+    "end-to-end",
+    "integration",
+    "serenity",
     "serenity-js",
-    "mocha",
+    "screenplay",
+    "screenplay-pattern",
     "tdd",
     "bdd",
     "test",
