--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -32,7 +32,16 @@
     "./package.json": "./package.json"
   },
   "keywords": [
+    "automation",
+    "browser",
+    "e2e",
+    "end-to-end",
+    "integration",
+    "serenity",
     "serenity-js",
+    "screenplay",
+    "screenplay-pattern",
+    "runner",
     "ui",
     "frontend",
     "bdd",
