feat(cucumber): support for Cucumber 11

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -152,6 +152,7 @@ jobs:
           "cucumber-8",
           "cucumber-9",
           "cucumber-10",
+          "cucumber-11",
           "jasmine",
           "mocha",
           "rest",
