--- a/packages/cucumber/package.json
+++ b/packages/cucumber/package.json
@@ -57,7 +57,7 @@
     "tiny-types": "1.23.0"
   },
   "peerDependencies": {
-    "@cucumber/cucumber": "^7.3.2 || ^8.5.0 || ^9.1.0 || ^10.0.0",
+    "@cucumber/cucumber": "^7.3.2 || ^8.5.0 || ^9.1.0 || ^10.0.0 || ^11.0.0",
     "cucumber": "^1.3.3 || ^2.3.1 || ^3.2.1 || ^4.2.1 || ^5.0.0 || ^6.0.0"
   },
   "peerDependenciesMeta": {
@@ -69,7 +69,7 @@
     }
   },
   "devDependencies": {
-    "@cucumber/cucumber": "10.9.0",
+    "@cucumber/cucumber": "11.0.0",
     "@integration/testing-tools": "3.0.0",
     "@types/chai": "4.3.19",
     "@types/mocha": "10.0.7",
