fix(core): refactoring - migrated from ts-node to tsx

--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -4,8 +4,8 @@ diff: true
 full-trace: true
 reporter: mocha-multi
 reporter-options: 'mocha-multi=.mocha-reporters.json'
-require: 'ts-node/register'
 timeout: 10000
 v8-stack-trace-limit: 100
 node-option:
   - trace-warnings
+  - import=tsx
