--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -137,7 +137,7 @@
     {
       "groupName": "TypeScript dependencies",
       "packagePatterns": [
-        "^ts-node$",
+        "^tsx",
         "^typescript$"
       ]
     },
