--- a/integration/cucumber-11/.mocharc.yml
+++ b/integration/cucumber-11/.mocharc.yml
@@ -5,10 +5,10 @@ full-trace: true
 reporter: mocha-multi
 reporter-options: 'mocha-multi=.mocha-reporters.json'
 require:
-  - 'ts-node/register'
   - 'src/register-cucumber.ts'
 spec: './node_modules/@integration/cucumber-specs/spec/**/*.spec.ts'
 timeout: 30000
 v8-stack-trace-limit: 100
 node-option:
   - trace-warnings
+  - import=tsx
