--- a/integration/webdriverio-mocha/package.json
+++ b/integration/webdriverio-mocha/package.json
@@ -42,6 +42,7 @@
     "@types/mocha": "10.0.8",
     "c8": "10.1.2",
     "mocha": "10.7.3",
-    "mocha-multi": "1.1.7"
+    "mocha-multi": "1.1.7",
+    "ts-node": "10.9.2"
   }
 }
