docs(webdriverio-8): updated documentation to point at the new webdriverio-8 module
Related tickets: re #2572

--- a/packages/webdriverio-8/package.json
+++ b/packages/webdriverio-8/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/webdriverio-8",
   "version": "3.29.4",
-  "description": "Adapter that integrates @serenity-js/web with WebdriverIO, enabling Serenity/JS reporting and using the Screenplay Pattern to write web and mobile test scenarios",
+  "description": "Adapter that integrates @serenity-js/web with WebdriverIO 8, enabling Serenity/JS reporting and using the Screenplay Pattern to write web and mobile test scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
@@ -65,7 +65,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/serenity-js/serenity-js.git",
-    "directory": "packages/webdriverio"
+    "directory": "packages/webdriverio-8"
   },
   "bugs": {
     "url": "https://github.com/serenity-js/serenity-js/issues"
